# musinsights

./: .gitignore  LICENSE  README.md  pyproject.toml
src/musinsights/: __init__.py  cli.py  config.py
src/musinsights/analyzers/: __init__.py  audio.py  base.py
src/musinsights/db/: __init__.py  engine.py  models.py  repository.py
src/musinsights/exporters/: __init__.py  formats.py
src/musinsights/ingestors/: __init__.py  base.py  local_files.py
src/musinsights/pipeline/: __init__.py  runner.py  stages.py
src/musinsights/services/: __init__.py  listenbrainz.py  musicbrainz.py
tests/: conftest.py
tests/test_ingestors/: test_local_files.py
