[project]
name = "musinsights"
version = "0.1.0"
description = "High-level insights into one's favorite music through audio analysis and data ingestion"
readme = "README.md"
authors = [
    { name = "Madelyn Potts", email = "17691010+Finaris@users.noreply.github.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.1",
    "asyncclick>=8.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "librosa>=0.10",
    "mutagen>=1.47",
    "numpy>=1.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "spotipy>=2.23",
    "aiofiles>=23.2",
    "musicbrainzngs>=0.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
analysis = ["duckdb>=0.9", "pandas>=2.1", "pyarrow>=14.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
musinsights = "musinsights.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/musinsights"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
